# onnx_study

./: .gitignore  README.md  xx.py
inference_by_cpp/YOLOv8-CPP-Inference/: CMakeLists.txt  main.cpp
inference_by_cpp/YOLOv8-ONNXRuntime-CPP/: CMakeLists.txt  main.cpp
inference_by_cpp/YOLOv8-ONNXRuntime-CPP/include/: inference.h
inference_by_cpp/YOLOv8-ONNXRuntime-CPP/src/: inference.cpp
scripts/: add_nodes.py  build_onnx1.py  build_onnx2.py  build_onnx_by_torch.py  run_onnx.py  simplify_onnx.py
